# lecture-test1

./: README.md  Untitled.ipynb  app.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  app-checkpoint.py
