[tool.poetry]
name = "lecture-test1"
version = "0.1.0"
description = ""
authors = ["scmopt <kubomikio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.89.0"
pandas = "^1.3.3"
plotly = "^5.3.1"
pystan = "^3.2.0"
fastai = "^2.5.2"
watchdog = "^2.1.6"
pandas-profiling = "^3.1.0"
streamlit-pandas-profiling = "^0.1.2"
hiplot = "^0.1.28"
gurobipy = "^9.1.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.1.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
